--- a/PomodoroTimer/Icon.xaml
+++ b/PomodoroTimer/Icon.xaml
@@ -2,7 +2,7 @@
 <Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="" Height="180" Width="180" Background="Transparent" WindowStyle="None" AllowsTransparency="True">
-    <Border CornerRadius="70" BorderThickness="1" Background="DarkRed">
-        <Label Foreground="White" FontSize="125" HorizontalAlignment="Center" VerticalAlignment="Center" Name="minutes" Padding="0,0,0,0">0</Label>
+    <Border CornerRadius="90" BorderThickness="1" Background="DarkRed">
+        <Label Foreground="White" FontSize="125" HorizontalAlignment="Center" VerticalAlignment="Center" Name="minutes" Padding="0,0,0,0" FontFamily="Arial Rounded MT Bold">0</Label>
     </Border>
 </Window>
